--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,8 @@ ul {
 a {
 display: block;
 text-decoration: none;
+margin: 0;
+padding: 0;
 }
 
 
@@ -42,8 +44,11 @@ h6 {
   margin-bottom: 0;
 }
 
+<!--header-->
+
 .header { 
-  border-bottom: 1px solid #e7e9fc;  
+  border-bottom: 1px solid #e7e9fc; 
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08); 
 }
 
 .header-container {
@@ -54,8 +59,6 @@ display: flex;
   max-width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
-  padding-top: 120px;
-  padding-bottom: 120px;
 }
 
 .header-navigation {
@@ -82,6 +85,7 @@ display: flex;
   gap: 40px; 
 }
 
+
 .header-menu-item {
 }
 
@@ -93,19 +97,36 @@ display: flex;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:#2E2F42;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
-.header-menu-link:hover {
+.header-menu-link.current {
+  position: relative;
+}
+
+.header-menu-link.current::after {
+  content: '';
+
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #404BBF;
+}
+
+
+.header-menu-link:hover,
+.header-menu-link:active ,
+.header-menu-link:focus,
+.header-menu-link.current {
   color: #404BBF;
 }
 
-.header-menu-link:active {
-  color: #404BBF;
-}
-
-.header-menu-link:focus {
-  color: #404BBF;
-}
 
 .address {
   font-style: normal;
@@ -128,31 +149,36 @@ display: flex;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color:#434455;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
 }
 
-.address-link:hover {
-  color: #404BBF;
-}
-
+.address-link:hover,
 .address-link:focus {
 color: #404BBF;
 }
 
 .hero {
-  background: #2e2f42;
-  background-image:url( ./img)
-  padding: 188px 0 188px;
+  padding-top: 188px;
+  padding-bottom: 188px;
+  background-color: #2E2F42;
+  background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
+   url(../images/people-office\ 1.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 1440px;
+  margin: 0 auto;
 }
 
 .hero-title {
   max-width: 496px;
   margin: 0 auto;
-  padding-top: 188px;
-  padding-bottom: 48px;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   color:#fff;
+  text-align: center;
 }
 
 .hero-btn {
@@ -161,6 +187,7 @@ color: #404BBF;
   height: 56px;
   border: none; 
   margin: 0 auto;
+  margin-top: 48px;
   padding: 16px 32px;
   border-radius: 4px;
   cursor: pointer;
@@ -205,6 +232,18 @@ color: #404BBF;
   width: calc((100% - 72px) / 4);
 }
 
+.feature-icon {
+  display: flex;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  justify-content: center;
+  align-items: center;
+  background: #f4f4fd;
+  margin-bottom: 8px;
+}
+
 .feature-list-title {
     margin-top: 0;
     margin-bottom: 8px;
@@ -247,6 +286,8 @@ color: #404BBF;
 
 .team-card {
   padding: 32px 0; 
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
 }
 
 .team-list-item { 
@@ -271,6 +312,21 @@ color: #404BBF;
     letter-spacing: 0.02em;
     color: #434455;
     text-align: center;  
+}
+
+.social-link {
+  padding: 0 16px 32px 16px;
+  display: flex;
+  flex-direction:row;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon-list {
+  display: flex;
+  gap: 24px;
+  flex-shrink: 0;
+  align-self: flex-end; 
 }
 
 .portfolio {
@@ -306,7 +362,10 @@ color: #404BBF;
   overflow: hidden;
   border: 1px solid #e7e9fc; 
   border-top: none; 
-  background-color: #fff;  
+  background-color: #fff; 
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
+  
 } 
 
 .portfolio-menu-item-title {
