--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ color: #404BBF;
   padding-bottom: 188px;
   background-color: #2E2F42;
   background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
-   url(../images/people-office\ 1.jpg);
+   url(../images/people-office.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 1440px;
@@ -327,6 +327,16 @@ color: #404BBF;
   gap: 24px;
   flex-shrink: 0;
   align-self: flex-end; 
+  list-style: none;
+}
+
+.icon {
+  fill: #4D5AE5;
+  border-radius: 50%;
+}
+
+.icon:hover {
+  fill: #31D0AA;
 }
 
 .portfolio {
