--- a/css/styles.css
+++ b/css/styles.css
@@ -285,7 +285,7 @@ color: #404BBF;
 }
 
 .team-card {
-  padding: 32px 0; 
+  padding: 32px 0 0 ; 
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background: #fff;
 }
@@ -314,12 +314,23 @@ color: #404BBF;
     text-align: center;  
 }
 
-.social-link {
+.social-contact {
+  margin-top: 8px;
   padding: 0 16px 32px 16px;
   display: flex;
   flex-direction:row;
   align-items: center;
   justify-content: center;
+}
+
+.social-link { 
+  display: flex;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  justify-content: center;
+  align-items: center;
 }
 
 .icon-list {
@@ -330,13 +341,14 @@ color: #404BBF;
   list-style: none;
 }
 
-.icon {
-  fill: #4D5AE5;
-  border-radius: 50%;
+.media-icon {
+  fill: #fff;
+
 }
 
-.icon:hover {
-  fill: #31D0AA;
+.icon-list :hover {
+  background-color:#31d0aa;
+  border-radius: 50%;
 }
 
 .portfolio {
@@ -399,6 +411,7 @@ color: #404BBF;
 .footer {
   background: #2e2f42;
   padding: 100px 0;
+  
 }
 
 .footer-logo {
@@ -426,4 +439,19 @@ color: #404BBF;
     letter-spacing: 0.02em;
     color: #f4f4fd;
     max-width: 264px;
+}
+
+.footer-social-contact{
+  width: 208px;
+  height: 80px;
+  margin-left: 120px;
+}
+
+.footer-list-title {
+   font: 500;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #fff;
+  text-align: center;
 }
