--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ h6 {
 
 .header { 
   border-bottom: 1px solid #e7e9fc; 
-  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08); 
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08); 
 }
 
 .header-container {
@@ -167,8 +167,9 @@ color: #404BBF;
    url(../images/people-office.jpg);
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: 1440px;
+  max-width: 1440px;
   margin: 0 auto;
+  background-cize:cover ;
 }
 
 .hero-title {
@@ -196,6 +197,7 @@ color: #404BBF;
   letter-spacing: 0.04em;
   color:#FFFFFF;
   background: #4D5AE5;
+  transition :background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover {
@@ -285,8 +287,7 @@ color: #404BBF;
 }
 
 .team-card {
-  padding: 32px 0 0 ; 
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  padding: 32px 0; 
   background: #fff;
 }
 
@@ -294,6 +295,8 @@ color: #404BBF;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+ 
 }
 
 .team-list-title-item {
@@ -314,48 +317,50 @@ color: #404BBF;
     text-align: center;  
 }
 
-.social-contact {
-  margin-top: 8px;
-  padding: 0 16px 32px 16px;
-  display: flex;
-  flex-direction:row;
-  align-items: center;
-  justify-content: center;
-}
-
-.social-link { 
-  display: flex;
+.social-item {
   width: 40px;
   height: 40px;
-  border-radius: 50%;
+}
+
+ .social-link { 
+  width: 100%;
+  height: 100%;
   background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.icon-list {
+ .icon-list {
   display: flex;
-  gap: 16px;
+  justify-content: center;
+  gap: 24px;
   flex-shrink: 0;
   align-self: flex-end; 
   list-style: none;
+  margin-top: 8px;
+  padding: 0 16px;
+  flex-direction:row;
+  align-items: center; 
 }
 
 .media-icon {
   fill: #fff;
-
 }
 
-.icon-list :hover {
-  background-color:#31d0aa;
-  border-radius: 50%;
+.social-link:hover {
+  background-color: #31D0AA; 
+}
+
+.social-link:focus {
+  background-color: #31D0AA; 
 }
 
 .portfolio {
   padding-top: 120px;
   padding-bottom: 120px; 
 }
-
 
 img {
   display: block;
@@ -366,15 +371,19 @@ img {
 .portfolio-menu-item {
   width: calc((100% - 48px) / 3); 
   background-color: #ffffff;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .portfolio-menu-item:hover .portfolio-item-text {
   transform: translateY(0);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-item-wrap {
   position: relative;
   overflow: hidden;
+  
 }
   
 .portfolio-item-text {
@@ -386,6 +395,7 @@ img {
   font: 400;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em; 
   padding: 40px 32px;
   height: 100%;
   transform: translateY(100%);
@@ -418,7 +428,6 @@ img {
   border-top: none; 
   background-color: #fff; 
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  background: #fff;
   
 } 
 
@@ -445,9 +454,15 @@ img {
   padding: 100px 0;  
 }
 
-.footer-list {
-  gap: 56px;
+.footer-container {
+  display: flex; 
+  align-items: baseline; 
 }
+
+.footer-logo-text {
+  margin-right: 120px
+}
+
 
 .footer-logo {
     display: inline-block;
@@ -477,8 +492,7 @@ img {
 }
 
 .footer-list-title {
-  display: flex;
-   font: 500;
+  font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
@@ -494,3 +508,37 @@ img {
   height: 80px;
 }
 
+.footer-icon-list {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  flex-shrink: 0;
+  align-self: flex-end; 
+  list-style: none;
+  margin-top: 8px;
+  padding: 0 16px;
+  flex-direction:row;
+  align-items: center; 
+}
+
+.social-link { 
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-link:hover {
+  background-color: #31D0AA; 
+}
+
+.social-link:focus {
+  background-color: #31D0AA; 
+}
+
+.media-icon {
+  fill:#f4f4fd;
+}
