--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ h6 {
 
 .header { 
   border-bottom: 1px solid #e7e9fc; 
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08); 
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px rgba(46, 47, 66, 0.16), 0 1px 6px  rgba(46, 47, 66, 0.08); 
 }
 
 .header-container {
@@ -169,7 +169,7 @@ color: #404BBF;
   background-repeat: no-repeat;
   max-width: 1440px;
   margin: 0 auto;
-  background-cize:cover ;
+  background-size:cover ;
 }
 
 .hero-title {
@@ -351,11 +351,11 @@ color: #404BBF;
 }
 
 .social-link:hover {
-  background-color: #31D0AA; 
+  background-color: #404bbf; 
 }
 
 .social-link:focus {
-  background-color: #31D0AA; 
+  background-color: #404bbf; 
 }
 
 .portfolio {
@@ -372,7 +372,7 @@ img {
 .portfolio-menu-item {
   width: calc((100% - 48px) / 3); 
   background-color: #ffffff;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
@@ -488,8 +488,12 @@ img {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #f4f4fd;
     max-width: 264px;
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.footer-text:hover {
+color: 
 }
 
 .footer-list-title {
@@ -534,6 +538,7 @@ img {
 
 .social-link:hover {
   background-color: #31D0AA; 
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
 }
 
 .social-link:focus {
