--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,6 @@ display: flex;
   gap: 40px; 
 }
 
-
 .header-menu-item {
 }
 
@@ -489,12 +488,8 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     max-width: 264px;
-    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-.footer-text:hover {
-color: 
-}
 
 .footer-list-title {
   font-weight: 500;
@@ -549,3 +544,8 @@ color:
   fill:#f4f4fd;
 }
 
+.social-item {
+  width: 40px;
+  height: 40px;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
