--- a/css/styles.css
+++ b/css/styles.css
@@ -362,11 +362,11 @@ color: #404BBF;
 .portfolio-menu-item {
   width: calc((100% - 48px) / 3); 
   background-color: #ffffff;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
-.portfolio-menu-item:hover {
+.portfolio-menu-item:hover .portfolio-item-text {
   transform: translateY(0);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
