--- a/css/styles.css
+++ b/css/styles.css
@@ -291,7 +291,6 @@ color: #404BBF;
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
- 
 }
 
 .team-list-title-item {
@@ -319,13 +318,22 @@ color: #404BBF;
 }
 
 .social-link { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-link:hover {
+  background-color: #404bbf; 
+}
+
+.social-link:focus {
+  background-color: #404bbf; 
 }
 
 .icon-list {
@@ -345,13 +353,7 @@ color: #404BBF;
   fill: #fff;
 }
 
-.social-link:hover {
-  background-color: #404bbf; 
-}
 
-.social-link:focus {
-  background-color: #404bbf; 
-}
 
 .portfolio {
   padding-top: 120px;
