--- a/css/styles.css
+++ b/css/styles.css
@@ -514,32 +514,32 @@ color: #404BBF;
   align-items: center; 
 }
 
+.footer-social-link { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-.social-link:hover {
-  background-color: #31D0AA; 
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
+.footer-social-link:hover {
+  background-color: #31D0AA;; 
 }
 
 .social-link:focus {
-  background-color: #31D0AA; 
+  background-color: #31D0AA;; 
 }
 
 .media-icon {
   fill:#f4f4fd;
 }
 
-.social-item {
+.footer-social-item {
   width: 40px;
   height: 40px;
   background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link { 
-  width: 100%;
-  height: 100%;
-  background-color: #4d5ae5;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
