--- a/css/styles.css
+++ b/css/styles.css
@@ -419,8 +419,7 @@ color: #404BBF;
   border: 1px solid #e7e9fc; 
   border-top: none; 
   background-color: #fff; 
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 } 
 
 .portfolio-menu-item-title {
@@ -526,11 +525,11 @@ color: #404BBF;
 }
 
 .footer-social-link:hover {
-  background-color: #31D0AA;; 
+  background-color: #31D0AA; 
 }
 
-.social-link:focus {
-  background-color: #31D0AA;; 
+.footer-social-link:focus {
+  background-color: #31D0AA;
 }
 
 .media-icon {
