--- a/css/styles.css
+++ b/css/styles.css
@@ -364,7 +364,7 @@ color: #404BBF;
 .portfolio-menu-item {
   width: calc((100% - 48px) / 3); 
   background-color: #ffffff;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
@@ -500,6 +500,12 @@ color: #404BBF;
   height: 80px;
 }
 
+.footer-social-item {
+  width: 40px;
+  height: 40px;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .footer-icon-list {
   display: flex;
   justify-content: center;
@@ -536,9 +542,5 @@ color: #404BBF;
   fill:#f4f4fd;
 }
 
-.footer-social-item {
-  width: 40px;
-  height: 40px;
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 
