--- a/css/styles.css
+++ b/css/styles.css
@@ -328,11 +328,7 @@ color: #404BBF;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:hover {
-  background-color: #404bbf; 
-}
-
-.social-link:focus {
+.social-link:hover, .social-link:focus {
   background-color: #404bbf; 
 }
 
@@ -353,45 +349,9 @@ color: #404BBF;
   fill: #fff;
 }
 
-
-
 .portfolio {
   padding-top: 120px;
   padding-bottom: 120px; 
-}
-
-
-.portfolio-menu-item {
-  width: calc((100% - 48px) / 3); 
-  background-color: #ffffff;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
-}
-
-.portfolio-menu-item:hover .portfolio-item-text {
-  transform: translateY(0);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.portfolio-item-wrap {
-  position: relative;
-  overflow: hidden; 
-}
-  
-.portfolio-item-text {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color:#4d5ae5;
-  color: #f4f4fd;;
-  font: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em; 
-  padding: 40px 32px;
-  height: 100%;
-  transform: translateY(100%);
-  transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-title {
@@ -409,8 +369,45 @@ color: #404BBF;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+  
 }
 
+.portfolio-menu-item {
+  width: calc((100% - 48px) / 3); 
+  background-color: #ffffff;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+  .portfolio-item-wrap {
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  padding: 40px 32px;
+  background-color:#4d5ae5;
+  color: #f4f4fd;;
+  font: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em; 
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-menu-item:hover  .overlay {
+  transform: translateY(0%);
+}
+
+.portfolio-menu-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+  0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 
 .portfolio-card {
   padding: 32px 16px;
@@ -451,9 +448,8 @@ color: #404BBF;
 }
 
 .footer-logo-text {
-  margin-right: 120px
+  margin-right: 120px;
 }
-
 
 .footer-logo {
     display: inline-block;
@@ -500,23 +496,14 @@ color: #404BBF;
   height: 80px;
 }
 
+.footer-icon-list {
+  display: flex;
+  gap: 16px;
+}
+
 .footer-social-item {
   width: 40px;
   height: 40px;
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-icon-list {
-  display: flex;
-  justify-content: center;
-  gap: 16px;
-  flex-shrink: 0;
-  align-self: flex-end; 
-  list-style: none;
-  margin-top: 8px;
-  padding: 0 16px;
-  flex-direction:row;
-  align-items: center; 
 }
 
 .footer-social-link { 
@@ -538,8 +525,8 @@ color: #404BBF;
   background-color: #31D0AA;
 }
 
-.media-icon {
-  fill:#f4f4fd;
+.footer-media-icon {
+fill: #F4F4FD;
 }
 
 
